identity/deploy/common/hydra-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hydra-project-starter
  namespace: project-starter
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: hydra-project-starter-tls
      hosts:
        - 'sso.ps.atls.tech'
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - 'sso.ps.atls.tech'
