identity/deploy/common/kratos-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kratos-project-starter
  namespace: project-starter
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: kratos-project-starter-tls
      hosts:
        - 'identity.ps.atls.tech'
